tests/errors/if-for/if.c

int main(){

if(5)
{
    break; // no error
}

if(6)
{
    continue; // error
}

int a;
if(a = 6)
{
    if(5.5) break;
}

}

